--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/assignment
+spring.datasource.url=jdbc:mysql://mysql-container:3306/assignment
 spring.datasource.username=root
 spring.datasource.password=7467467
 
